--- a/style.css
+++ b/style.css
@@ -94,17 +94,22 @@
 }
 
 .nav-link {
-  height: 55px;
+  height: 60px;
   padding-top: 17px;
   font-size: 15px;  
   color: white;
   font-family: sans-serif;
 }
 
-.active a, .nav-link:hover{
-  height: 55px;
+/*.active a,*/ .nav-link:hover{
+  height: 60px;
   color: black;
   background-color:#dcdedd;    
+}
+
+button:focus{
+  
+  outline: none;
 }
 
 
@@ -121,7 +126,7 @@
 .banner ul{
   list-style: none;
   position: relative;
-  top: 60px;
+  top: 80px;
   left: 10%;
   color: white;
 }
@@ -140,7 +145,9 @@
   padding: 5px;
   background-color: rgba(26, 24, 25, .8);
 }
-
+.img-col {
+  padding: 0 25px;
+}
 .txt-col{  
   margin-top: 20px;
   font-family: 'Open Sans Condensed', sans-serif;
@@ -158,7 +165,7 @@
 }
 
 .cont-row {
-  padding: 25px 0px;
+  padding-top: 40px;
 }
 
 
@@ -171,7 +178,8 @@
 
 #textPane{
   text-align: center;
-  margin: 5px 10px;
+  margin: 40px 10px 20px 10px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -191,9 +199,13 @@ footer span {
   color: #40b9ba;
 }
 
-/* for large mobile devices or in landscape mode*/
+/* for large mobile devices or in landscape mode */
 
 @media (min-width: 576px){
+
+  .cont-row {
+    padding-top:  40px 0px;
+  }
   
   .txt-col{  
     margin-top: 20px;
@@ -221,7 +233,7 @@ footer span {
     height: auto;     
   }
 
-}
+}  
 
 
 /* for tablet */
@@ -229,12 +241,16 @@ footer span {
 @media (min-width: 768px) {
 
   .header{
-    height: auto;
+    height:auto;
   }
+  #contactHead {
+    padding-top: 2px;
+  } 
   
   #contactHead li{
     display: inline;
     padding: 0;
+    font-size: 10px;
     position: relative;
     bottom: 8px;    
   }
@@ -247,6 +263,8 @@ footer span {
   .navbar-brand{
     margin: 0;
   }
+
+
 
   #navbarNav {
     float: right;
@@ -271,148 +289,93 @@ footer span {
     font-family: sans-serif;
   }
 
-  .active a{
+  .nav-link:hover {
+    background-color: white;
     height: 50px;
-    background-color:white;    
   }
-/*
-  .banner { 
-    height: 291px;    
-  }
-  
+
 
   .banner ul{
     position: relative;
-    top: 100px;
-    left: 100px;
+    top: 80px;
+    left: 80px;
     
   }
-  */
-  .cont-row{
-    padding:25px 25px;
-  }
-   
-  .txt-col{  
-    margin-top: 20px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    height: auto;
-  }
 
-  #txtCol {
-    margin: 0;
+  .cont-row {
+    padding:  40px 25px;
   }
   
+  .txt-col {
+    padding: 0 32px;
+  }
+
   .txt-col-h1{
-    font-size: 9vw;    
-    line-height: 9vw;
-    color:black;
+    padding-left: 15px;
+    font-size: 55px;
+    line-height: 60px;
+  }
+
+  .txt-col-p {
+    padding-left: 15px;
+  }
+
+  #textPane {
+    font-size: .9rem;
+    margin: 50px 40px;
   }
   
-  .txt-col-p{
-    margin-top: 21px;
-    line-height: 27px;
-  }
-
-  .img-pane{
-    width: 100%;
-    height: auto;     
-  }
-
 }
 
 /* for laptop and large displays */
 
 @media (min-width: 992px) {
 
-
-  .header{
-    height: auto;
+  #contactHead li{    
+    font-size: 12px;
   }
   
-  #contactHead li{
-    display: inline;
-    padding: 0;
+  .banner{
+    height: 245px;
+  }
+
+  .banner ul {
     position: relative;
-    bottom: 8px;    
+    top: 95px;
+    left: 110px;
+    }
+
+  .banner ul :first-child {
+    font-size: 18px;
+    font-weight: bolder;
+    padding: 3px 30px 2px 4px;
+    background-color: #40b9ba;
+    width: max-content;
   }
 
-  #socialNav li{
-    margin-top: 0;
-    margin-bottom: 5px;
+  .banner ul :last-child {
+    width: 257px;
+    font-size: 16px;
+    padding: 5px;
+    line-height: 28px;
+    background-color: rgba(26, 24, 25, .7);
   }
 
-  .navbar-brand{
-    margin: 0;
-  }
-
-  #navbarNav {
-    float: right;
-    position: relative ;
-    top: 0;
-  }
-
-  .nav-item {  
-    margin-left:3vw;
-    margin-right: 3vw;
-    background-color: white;
-    text-align: center;  
-  }
-  
   .nav-link {
-    margin-left:0;
-    margin-right:0;
-    height: 50px;
-    padding-top: 17px;
-    font-size: 15px;  
-    color: black;
-    font-family: sans-serif;
+    font-size: 17px;
+    font-weight: 600;
   }
 
-  .active a{
-    height: 50px;
-    background-color:white;    
-  }
-/*
-  .banner { 
-    height: 291px;    
-  }
   
 
-  .banner ul{
-    position: relative;
-    top: 100px;
-    left: 100px;
-    
-  }
-  */
-  .cont-row{
-    padding:25px 25px;
-  }
-   
-  .txt-col{  
-    margin-top: 20px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    height: auto;
-  }
-
-  #txtCol {
-    margin: 0;
-  }
-  
-  .txt-col-h1{
-    font-size: 9vw;    
+  .txt-col-h1{    
+    font-size: 8vw;
     line-height: 9vw;
-    color:black;
-  }
-  
-  .txt-col-p{
-    margin-top: 21px;
-    line-height: 27px;
   }
 
-  .img-pane{
-    width: 100%;
-    height: auto;     
+  .txt-col-p {
+    font-size: 17px;
+    line-height: 28px;
   }
 
 
