--- a/style.css
+++ b/style.css
@@ -88,13 +88,14 @@
   margin: 0;
 }
 
-.nav-item {  
+.nav-item { 
+  height: 60px; 
   background-color: #40b9ba;
   text-align: center;  
 }
 
 .nav-link {
-  height: 60px;
+  
   padding-top: 17px;
   font-size: 15px;  
   color: white;
@@ -102,7 +103,7 @@
 }
 
 /*.active a,*/ .nav-link:hover{
-  height: 60px;
+  height: px;
   color: black;
   background-color:#dcdedd;    
 }
@@ -203,8 +204,15 @@ footer span {
 
 @media (min-width: 576px){
 
+
+  .banner ul{
+    position: relative;
+    top: 80px;
+    left: 30%;    
+  }
+
   .cont-row {
-    padding-top:  40px 0px;
+    padding-top:  40px;
   }
   
   .txt-col{  
@@ -260,16 +268,18 @@ footer span {
     margin-bottom: 5px;
   }
 
+  .navbar {
+    height: 80px;
+  }
+
   .navbar-brand{
     margin: 0;
   }
 
-
-
   #navbarNav {
     float: right;
     position: relative ;
-    top: 0;
+    top: 7px;
   }
 
   .nav-item {  
@@ -334,6 +344,20 @@ footer span {
   #contactHead li{    
     font-size: 12px;
   }
+
+  .navbar {
+    height: 90px;
+  }
+
+  .navbar-brand {
+    position: relative;
+    left: 20px;
+  }
+
+  .nav-link {
+    font-size: 17px;
+    font-weight: 600;
+  }  
   
   .banner{
     height: 245px;
@@ -361,13 +385,6 @@ footer span {
     background-color: rgba(26, 24, 25, .7);
   }
 
-  .nav-link {
-    font-size: 17px;
-    font-weight: 600;
-  }
-
-  
-
   .txt-col-h1{    
     font-size: 8vw;
     line-height: 9vw;
@@ -376,6 +393,11 @@ footer span {
   .txt-col-p {
     font-size: 17px;
     line-height: 28px;
+  }
+
+  footer {
+    padding: 26px 0;
+    line-height: 20%;
   }
 
 
