--- a/style.css
+++ b/style.css
@@ -5,7 +5,16 @@
   padding: 0;
 }
 
+a,a:hover {
+  text-decoration: none;
+}
+
 .container {
+  max-width: 1330px;
+  margin: 0 auto;
+}
+
+.contact-container {
   max-width: 1330px;
   margin: 0 auto;
 }
@@ -18,13 +27,8 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-.contact-container {
-  max-width: 1330px;
-  margin: 0 auto;
-}
-
 .contact-us-item {
-  margin-top: 5px;
+  margin-bottom: 0;
   padding-left: 20px;
   list-style: none;
   font-size: 12px;
@@ -36,19 +40,17 @@
 }
 
 .social-nav {
-  padding-left: 0;
+  align-items: flex-end;
 }
 
-.social-nav ul  {
-  list-style: none;
-  float: right;
-  margin-top: 30px;  
-  padding-right: 10px;
+.social-nav-item {
+  margin-bottom: 10px;
+  padding-right: 20px;
 }
 
 .social-nav li  {
   display: inline;
-  padding: 0 4px;
+  padding: 0 3px;
 }
 
 .navbar {
@@ -123,7 +125,7 @@ button:focus {
 }
 
 .banner-head {
-  padding: 6px 25px 2px 6px;
+  padding: 3px 20px 3px 6px;
   margin-left: 8%;
   margin-top: 40px;
   background-color: #40b9ba;
@@ -132,13 +134,12 @@ button:focus {
 }
 
 .banner-head h6 {
-  font-size: 18px;
   font-weight: bolder;
   margin: 0;
 }
 
 .banner-para {
-  width: 270px;
+  width: 255px;
   padding: 6px; 
   margin-left: 8%;
   color: white;
@@ -147,7 +148,6 @@ button:focus {
 
 .banner-para p {
   margin: 0;
-  font-size: 17px;
   line-height: 1.8;
 }
 
@@ -190,13 +190,11 @@ button:focus {
   max-height: 100%;   
 }
 
-
 #textPane {
   margin-top: 50px;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
 }
-
 
 footer {
   font-family: 'Open Sans', sans-serif;
@@ -217,8 +215,6 @@ footer span {
 /* for large mobile devices or in landscape mode */
 
 @media (min-width: 576px) {
-
-
 
   .cont-row {
     padding:  40px 15px;
@@ -255,9 +251,7 @@ footer span {
     max-width: 100%;
     max-height: 100%;     
   }
-
-}  
-
+}
 
 /* for tablet */
 
@@ -267,17 +261,9 @@ footer span {
     height: 22px;
   }
 
-  .contact-us {
-    padding-top:0px;
-    padding-left: 10px;
-  }
-
   .contact-us-item {
     font-size: 10px;
-    font-weight: bold;
-    margin: 0 ;
-    padding-top: 2px;
-    padding-left: 0;
+    padding-left: 15px
   }
 
   .contact-us-item li {
@@ -289,17 +275,17 @@ footer span {
     height: 15px ;
   }
 
-  .social-nav ul {
-    margin: 0;
+  .social-nav {
+    align-items: center;
   }
 
-  .social-nav li {
-    padding: 0 3px;
+  .social-nav-item{
+    margin: 0;
+    padding-bottom: 5px;
   }
 
   .social-nav-img {
-    height: 22px;
-    padding-bottom: 5px;
+    height: 16px;
   }
 
   .navbar {
@@ -372,8 +358,7 @@ footer span {
 
   #textPane {
     font-size: 13px;
-  }
-  
+  }  
 }
 
 /* for laptop and large displays */
@@ -394,7 +379,7 @@ footer span {
   }
 
   .social-nav-img {
-    height: 25px;
+    height: 20px;
   }
 
   .navbar {
@@ -423,6 +408,10 @@ footer span {
     height: 245px;
   }
 
+  .banner-head h6 {
+    font-size: 18px;
+  }
+
   .cont-row{
     padding-left: 0;
     padding-right: 0;
@@ -434,8 +423,7 @@ footer span {
   }
 
   .txt-col-p {
-    font-size: 17px;
-    
+    font-size: 17px;   
   }
   
   .txt-col-2 {
